--- a/12. animating-task-list/task-list/package.json
+++ b/12. animating-task-list/task-list/package.json
@@ -13,7 +13,9 @@
     "@heroicons/react": "^1.0.6",
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0",
+    "react-use-keypress": "^1.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
